--- a/environment_cpu.yaml
+++ b/environment_cpu.yaml
@@ -5,18 +5,18 @@ channels:
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
+  - _pytorch_select=0.2=gpu_0
   - attrs=19.3.0=py_0
   - backcall=0.1.0=py_0
+  - blas=1.0=mkl
   - bleach=3.1.0=py_0
   - bzip2=1.0.8=h516909a_1
-  - ca-certificates=2019.9.11=hecc5488_0
-  - certifi=2019.9.11=py37_0
+  - ca-certificates=2019.11.28=hecc5488_0
+  - certifi=2019.11.28=py37_0
   - cffi=1.13.2=py37h8022711_0
   - cftime=1.0.4.2=py37hc1659b7_0
-  - chardet=3.0.4=py37_1003
-  - colorama=0.4.1=py_0
   - cpuonly=1.0=0
-  - cryptography=2.8=py37h72c5cf5_0
+  - cudatoolkit=10.1.243=h6bb024c_0
   - curl=7.65.3=hf8cf82a_0
   - cycler=0.10.0=py_2
   - dbus=1.13.6=he372182_0
@@ -28,93 +28,92 @@ dependencies:
   - fontconfig=2.13.1=h86ecdb6_1001
   - freetype=2.10.0=he983fc9_1
   - gettext=0.19.8.1=hc5be6a0_1002
-  - gitdb2=2.0.6=py_0
-  - gitpython=3.0.5=py_0
   - glib=2.58.3=py37h6f030ca_1002
   - gst-plugins-base=1.14.5=h0935bb2_0
   - gstreamer=1.14.5=h36ae1b5_0
+  - h5py=2.10.0=nompi_py37h513d04c_100
   - hdf4=4.2.13=hf30be14_1003
   - hdf5=1.10.5=nompi_h3c11f04_1104
   - icu=64.2=he1b5a44_1
-  - idna=2.8=py37_1000
   - importlib_metadata=0.23=py37_0
   - intel-openmp=2019.4=243
   - ipykernel=5.1.3=py37h5ca1d4c_0
-  - ipython=7.9.0=py37h5ca1d4c_0
+  - ipython=7.10.0=py37h5ca1d4c_0
   - ipython_genutils=0.2.0=py_1
   - jedi=0.15.1=py37_0
   - jinja2=2.10.3=py_0
   - joblib=0.14.0=py_0
   - jpeg=9c=h14c3975_1001
   - json5=0.8.5=py_0
-  - jsonschema=3.1.1=py37_0
+  - jsonschema=3.2.0=py37_0
   - jupyter_client=5.3.3=py37_1
-  - jupyter_core=4.5.0=py_0
+  - jupyter_core=4.6.1=py37_0
   - jupyterlab=1.2.3=py_0
   - jupyterlab_server=1.0.6=py_0
   - kiwisolver=1.1.0=py37hc9558a2_0
   - krb5=1.16.3=h05b26f9_1001
-  - libblas=3.8.0=14_openblas
-  - libcblas=3.8.0=14_openblas
+  - libblas=3.8.0=14_mkl
+  - libcblas=3.8.0=14_mkl
   - libclang=9.0.0=default_hde54327_4
   - libcurl=7.65.3=hda55be3_0
   - libedit=3.1.20170329=hf8c457e_1001
   - libffi=3.2.1=he1b5a44_1006
-  - libgcc-ng=9.1.0=hdf63c60_0
+  - libgcc-ng=9.2.0=hdf63c60_0
   - libgfortran-ng=7.3.0=hdf63c60_2
   - libiconv=1.15=h516909a_1005
-  - liblapack=3.8.0=14_openblas
+  - liblapack=3.8.0=14_mkl
+  - libllvm8=8.0.1=hc9558a2_0
   - libllvm9=9.0.0=hc9558a2_3
-  - libnetcdf=4.7.1=nompi_h94020b1_101
+  - libnetcdf=4.7.1=nompi_h94020b1_102
   - libopenblas=0.3.7=h6e990d7_3
   - libpng=1.6.37=hed695b0_0
   - libsodium=1.0.17=h516909a_0
   - libssh2=1.8.2=h22169c7_2
-  - libstdcxx-ng=9.1.0=hdf63c60_0
+  - libstdcxx-ng=9.2.0=hdf63c60_0
   - libtiff=4.1.0=hc3755c2_1
   - libuuid=2.32.1=h14c3975_1000
   - libxcb=1.13=h14c3975_1002
   - libxkbcommon=0.9.1=hebb1f50_0
   - libxml2=2.9.10=hee79883_0
+  - llvmlite=0.30.0=py37h8b12597_1
   - lz4-c=1.8.3=he1b5a44_1001
   - markupsafe=1.1.1=py37h516909a_0
   - matplotlib=3.1.2=py37_1
   - matplotlib-base=3.1.2=py37h250f245_1
   - mistune=0.8.4=py37h516909a_1000
   - mkl=2019.4=243
+  - mkl-service=2.3.0=py37h516909a_0
   - more-itertools=7.2.0=py_0
   - nbconvert=5.6.1=py37_0
-  - nbdime=1.1.0=py37_0
   - nbformat=4.4.0=py_1
   - ncurses=6.1=hf484d3e_1002
-  - netcdf4=1.5.3=py37hf3213d6_0
+  - netcdf4=1.5.3=nompi_py37hfee4bf2_101
   - ninja=1.9.0=hc9558a2_1
   - notebook=6.0.1=py37_0
   - nspr=4.23=he1b5a44_0
   - nss=3.47=he751ad9_0
+  - numba=0.46.0=py37hb3f55d8_1
   - numpy=1.17.3=py37h95a1406_0
   - olefile=0.46=py_0
   - openssl=1.1.1d=h516909a_0
   - pandas=0.25.3=py37hb3f55d8_0
-  - pandoc=2.7.3=0
+  - pandoc=2.8.0.1=0
   - pandocfilters=1.4.2=py_1
   - parso=0.5.1=py_0
   - pcre=8.43=he1b5a44_0
   - pexpect=4.7.0=py37_0
   - pickleshare=0.7.5=py37_1000
-  - pillow=6.2.1=py37h6b7be26_0
+  - pillow=6.2.1=py37hd70f55b_1
   - pip=19.3.1=py37_0
   - prometheus_client=0.7.1=py_0
-  - prompt_toolkit=2.0.10=py_0
+  - prompt_toolkit=3.0.1=py_0
   - pthread-stubs=0.4=h14c3975_1001
   - ptyprocess=0.6.0=py_1001
   - pycparser=2.19=py37_1
-  - pygments=2.4.2=py_0
-  - pyopenssl=19.0.0=py37_0
+  - pygments=2.5.1=py_0
   - pyparsing=2.4.5=py_0
   - pyqt=5.12.3=py37hcca6a23_1
-  - pyrsistent=0.15.5=py37h516909a_0
-  - pysocks=1.7.1=py37_0
+  - pyrsistent=0.15.6=py37h516909a_0
   - python=3.7.3=h33d41f4_1
   - python-dateutil=2.8.1=py_0
   - pytorch=1.3.1=py3.7_cpu_0
@@ -122,22 +121,19 @@ dependencies:
   - pyzmq=18.1.1=py37h1768529_0
   - qt=5.12.5=hd8c4c69_1
   - readline=8.0=hf8c457e_0
-  - requests=2.22.0=py37_1
   - scikit-learn=0.21.3=py37hcdab131_0
   - scipy=1.3.2=py37h921218d_0
   - send2trash=1.5.0=py_0
-  - setuptools=41.6.0=py37_1
+  - setuptools=42.0.1=py37_0
   - six=1.13.0=py37_0
-  - smmap2=2.0.5=py_0
   - sqlite=3.30.1=hcee41ef_0
   - terminado=0.8.3=py37_0
   - testpath=0.4.4=py_0
-  - tk=8.6.9=hed695b0_1003
+  - tk=8.6.10=hed695b0_0
   - torchvision=0.4.2=py37_cpu
   - tornado=6.0.3=py37h516909a_0
-  - tqdm=4.38.0=py_0
+  - tqdm=4.39.0=py_0
   - traitlets=4.3.3=py37_0
-  - urllib3=1.25.7=py37_0
   - wcwidth=0.1.7=py_1
   - webencodings=0.5.1=py_1
   - wheel=0.33.6=py37_0
@@ -151,5 +147,4 @@ dependencies:
   - pip:
     - pyqt5-sip==4.19.18
     - pyqtwebengine==5.12.1
-prefix: /home/mgauch/miniconda3/envs/grip
 
